// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Group.tools.svelte 1`] = `
<span>
  <ul>
    <li>
      <div
        class="tool"
        style="--increment: 0.5rem;"
      >
        <span
          class="material-icons symbol"
        >
          architecture
        </span>
        <span>
          Component #1
        </span>
      </div>
       
    </li>
    <li>
      <div
        class="tool"
        style="--increment: 0.5rem;"
      >
        <span
          class="material-icons symbol"
        >
          architecture
        </span>
        <span>
          Component #2
        </span>
      </div>
       
    </li>
    <li>
      <div
        class="tool"
        style="--increment: 0.5rem;"
      >
        <span
          class="material-icons symbol"
        >
          architecture
        </span>
        <span>
          Component #3
        </span>
      </div>
       
    </li>
  </ul>
</span>
`;

exports[`Toolshot components/Group.tools.svelte 2`] = `
<span>
  <ul>
    <li>
      <div
        class="tool"
        style="--increment: 0.5rem;"
      >
        <span
          class="material-icons symbol"
        >
          architecture
        </span>
        <span>
          Component #3
        </span>
      </div>
       
    </li>
    <li>
      <div
        class="tool"
        style="--increment: 0.5rem;"
      >
        <span
          class="material-icons expandable"
        >
          expand_more
        </span>
        <span>
          Folder A
        </span>
      </div>
       
      <div
        class="nested collapsed"
      >
        <ul>
          <li>
            <div
              class="tool"
              style="--increment: 1rem;"
            >
              <span
                class="material-icons expandable"
              >
                expand_more
              </span>
              <span>
                Folder B
              </span>
            </div>
             
            <div
              class="nested collapsed"
            >
              <ul>
                <li>
                  <div
                    class="tool"
                    style="--increment: 1.5rem;"
                  >
                    <span
                      class="material-icons symbol"
                    >
                      architecture
                    </span>
                    <span>
                      Component #1
                    </span>
                  </div>
                   
                </li>
                <li>
                  <div
                    class="tool"
                    style="--increment: 1.5rem;"
                  >
                    <span
                      class="material-icons symbol"
                    >
                      architecture
                    </span>
                    <span>
                      Component #2
                    </span>
                  </div>
                   
                </li>
              </ul>
            </div>
             
          </li>
        </ul>
      </div>
       
    </li>
    <li>
      <div
        class="tool"
        style="--increment: 0.5rem;"
      >
        <span
          class="material-icons expandable"
        >
          expand_more
        </span>
        <span>
          Folder C
        </span>
      </div>
       
      <div
        class="nested collapsed"
      >
        <ul>
          <li>
            <div
              class="tool"
              style="--increment: 1rem;"
            >
              <span
                class="material-icons symbol"
              >
                architecture
              </span>
              <span>
                Component #3
              </span>
            </div>
             
          </li>
          <li>
            <div
              class="tool"
              style="--increment: 1rem;"
            >
              <span
                class="material-icons symbol"
              >
                architecture
              </span>
              <span>
                Component #4
              </span>
            </div>
             
          </li>
        </ul>
      </div>
       
    </li>
  </ul>
</span>
`;

exports[`Toolshot components/Group.tools.svelte 3`] = `
<span>
  <ul />
</span>
`;
